# sdttools

./: .gitignore  BUILD_INSTRUCTIONS.MD  LICENSE  README.md  pyproject.toml
src/sdttools/: __init__.py  __main__.py  cli.py  demux.py  mux.py  sdt.py  types.py  utils.py
